force-app/main/default/objects/Onboarding_Task_Def__mdt/Onboarding_Task_Def__mdt.object-meta.xml
<CustomObject>
    <label>Onboarding Task Def</label>
    <pluralLabel>Onboarding Task Defs</pluralLabel>
</CustomObject>