force-app/main/default/objects/Onboarding_Task_Def__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>