force-app/main/default/objects/Onboarding_Task_Def__mdt/fields/Due_Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>Due_Day_Offset__c</fullName>
    <label>Due Day Offset</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>