force-app/main/default/objects/Onboarding_Task_Def__mdt/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>40</length>
    <type>Text</type>
</CustomField>